test: 피드 기능 개선으로 인한 테스트 코드 수정 및 추가